# Arkanoid

./: CMakeLists.txt  Main.h  README.md  main.cpp
16_Games/01 Tetris/: main.cpp
16_Games/02 Doodle Jump/: main.cpp
16_Games/03 Arkanoid/: main.cpp
16_Games/04 Snake/: main.cpp
16_Games/05 Minesweeper/: main.cpp
16_Games/06 Fifteen-Puzzle/: main.cpp
16_Games/07 Racing (Top Down)/: main.cpp
16_Games/08 Outrun/: main.cpp
16_Games/09 Xonix/: main.cpp
16_Games/10 Bejeweled/: main.cpp
16_Games/11 NetWalk (Pipe Puzzle)/: main.cpp
16_Games/14 Chess/: main.cpp
16_Games/15 Volleyball/: main.cpp
16_Games/16 Asteroids/: main.cpp
Game/: EndGameMenu.cpp  EndGameMenu.h  Game.cpp  Game.h  GameApp.cpp  GameApp.h  GameMenu.cpp  GameMenu.h  GameStartMenu.cpp  GameStartMenu.h
GameObjects/: GameField.h  Object.cpp  Object.h
GameObjects/Ball/: Ball.cpp  Ball.h
GameObjects/Blocks/: Block.cpp  Block.h  Bonus_Block.cpp  Bonus_Block.h  Moving_Block.cpp  Moving_Block.h  Ordinary_Block.cpp  Ordinary_Block.h  Speed_Block.cpp  Speed_Block.h  Unbreakable_Block.cpp  Unbreakable_Block.h
GameObjects/Bonuses/: Bonus.cpp  Bonus.h
GameObjects/Platform/: Platform.cpp  Platform.h
images/: bonus_CHANGE_TRAJECTORY.psd
